aParser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> IDENTIFIER EQUALS expression
Rule 4     statement -> expression
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression POWER expression
Rule 10    expression -> expression LT expression
Rule 11    expression -> expression GT expression
Rule 12    expression -> expression LE expression
Rule 13    expression -> expression GE expression
Rule 14    expression -> expression EQ expression
Rule 15    expression -> expression NE expression
Rule 16    expression -> SQRT LPAREN expression RPAREN
Rule 17    expression -> LOG LPAREN expression RPAREN
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> IDENTIFIER
Rule 20    expression -> NUMBER

Terminals, with rules where they appear

DIVIDE               : 8
EQ                   : 14
EQUALS               : 3
GE                   : 13
GT                   : 11
IDENTIFIER           : 3 19
LE                   : 12
LOG                  : 17
LPAREN               : 16 17 18
LT                   : 10
MINUS                : 6
NE                   : 15
NUMBER               : 20
PLUS                 : 5
POWER                : 9
RPAREN               : 16 17 18
SQRT                 : 16
TIMES                : 7
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 17 18
statement            : 1 2
statements           : 1 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . IDENTIFIER EQUALS expression
    (4) statement -> . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    IDENTIFIER      shift and go to state 3
    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 8

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . IDENTIFIER EQUALS expression
    (4) statement -> . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    IDENTIFIER      shift and go to state 3
    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    NUMBER          shift and go to state 8

    statement                      shift and go to state 9
    expression                     shift and go to state 4

state 2

    (2) statements -> statement .

    IDENTIFIER      reduce using rule 2 (statements -> statement .)
    SQRT            reduce using rule 2 (statements -> statement .)
    LOG             reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> IDENTIFIER . EQUALS expression
    (19) expression -> IDENTIFIER .

    EQUALS          shift and go to state 10
    PLUS            reduce using rule 19 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 19 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 19 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 19 (expression -> IDENTIFIER .)
    POWER           reduce using rule 19 (expression -> IDENTIFIER .)
    LT              reduce using rule 19 (expression -> IDENTIFIER .)
    GT              reduce using rule 19 (expression -> IDENTIFIER .)
    LE              reduce using rule 19 (expression -> IDENTIFIER .)
    GE              reduce using rule 19 (expression -> IDENTIFIER .)
    EQ              reduce using rule 19 (expression -> IDENTIFIER .)
    NE              reduce using rule 19 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 19 (expression -> IDENTIFIER .)
    SQRT            reduce using rule 19 (expression -> IDENTIFIER .)
    LOG             reduce using rule 19 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 19 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 19 (expression -> IDENTIFIER .)
    $end            reduce using rule 19 (expression -> IDENTIFIER .)


state 4

    (4) statement -> expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression

    IDENTIFIER      reduce using rule 4 (statement -> expression .)
    SQRT            reduce using rule 4 (statement -> expression .)
    LOG             reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    NUMBER          reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    TIMES           shift and go to state 13
    DIVIDE          shift and go to state 14
    POWER           shift and go to state 15
    LT              shift and go to state 16
    GT              shift and go to state 17
    LE              shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21


state 5

    (16) expression -> SQRT . LPAREN expression RPAREN

    LPAREN          shift and go to state 22


state 6

    (18) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 23

state 7

    (17) expression -> LOG . LPAREN expression RPAREN

    LPAREN          shift and go to state 25


state 8

    (20) expression -> NUMBER .

    PLUS            reduce using rule 20 (expression -> NUMBER .)
    MINUS           reduce using rule 20 (expression -> NUMBER .)
    TIMES           reduce using rule 20 (expression -> NUMBER .)
    DIVIDE          reduce using rule 20 (expression -> NUMBER .)
    POWER           reduce using rule 20 (expression -> NUMBER .)
    LT              reduce using rule 20 (expression -> NUMBER .)
    GT              reduce using rule 20 (expression -> NUMBER .)
    LE              reduce using rule 20 (expression -> NUMBER .)
    GE              reduce using rule 20 (expression -> NUMBER .)
    EQ              reduce using rule 20 (expression -> NUMBER .)
    NE              reduce using rule 20 (expression -> NUMBER .)
    IDENTIFIER      reduce using rule 20 (expression -> NUMBER .)
    SQRT            reduce using rule 20 (expression -> NUMBER .)
    LOG             reduce using rule 20 (expression -> NUMBER .)
    LPAREN          reduce using rule 20 (expression -> NUMBER .)
    NUMBER          reduce using rule 20 (expression -> NUMBER .)
    $end            reduce using rule 20 (expression -> NUMBER .)
    RPAREN          reduce using rule 20 (expression -> NUMBER .)


state 9

    (1) statements -> statements statement .

    IDENTIFIER      reduce using rule 1 (statements -> statements statement .)
    SQRT            reduce using rule 1 (statements -> statements statement .)
    LOG             reduce using rule 1 (statements -> statements statement .)
    LPAREN          reduce using rule 1 (statements -> statements statement .)
    NUMBER          reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)


state 10

    (3) statement -> IDENTIFIER EQUALS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 26

state 11

    (5) expression -> expression PLUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 27

state 12

    (6) expression -> expression MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 28

state 13

    (7) expression -> expression TIMES . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 29

state 14

    (8) expression -> expression DIVIDE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 30

state 15

    (9) expression -> expression POWER . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 31

state 16

    (10) expression -> expression LT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 32

state 17

    (11) expression -> expression GT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 33

state 18

    (12) expression -> expression LE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 34

state 19

    (13) expression -> expression GE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 35

state 20

    (14) expression -> expression EQ . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 36

state 21

    (15) expression -> expression NE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 37

state 22

    (16) expression -> SQRT LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 38

state 23

    (18) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression

    RPAREN          shift and go to state 39
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    TIMES           shift and go to state 13
    DIVIDE          shift and go to state 14
    POWER           shift and go to state 15
    LT              shift and go to state 16
    GT              shift and go to state 17
    LE              shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21


state 24

    (19) expression -> IDENTIFIER .

    RPAREN          reduce using rule 19 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 19 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 19 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 19 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 19 (expression -> IDENTIFIER .)
    POWER           reduce using rule 19 (expression -> IDENTIFIER .)
    LT              reduce using rule 19 (expression -> IDENTIFIER .)
    GT              reduce using rule 19 (expression -> IDENTIFIER .)
    LE              reduce using rule 19 (expression -> IDENTIFIER .)
    GE              reduce using rule 19 (expression -> IDENTIFIER .)
    EQ              reduce using rule 19 (expression -> IDENTIFIER .)
    NE              reduce using rule 19 (expression -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 19 (expression -> IDENTIFIER .)
    SQRT            reduce using rule 19 (expression -> IDENTIFIER .)
    LOG             reduce using rule 19 (expression -> IDENTIFIER .)
    LPAREN          reduce using rule 19 (expression -> IDENTIFIER .)
    NUMBER          reduce using rule 19 (expression -> IDENTIFIER .)
    $end            reduce using rule 19 (expression -> IDENTIFIER .)


state 25

    (17) expression -> LOG LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression POWER expression
    (10) expression -> . expression LT expression
    (11) expression -> . expression GT expression
    (12) expression -> . expression LE expression
    (13) expression -> . expression GE expression
    (14) expression -> . expression EQ expression
    (15) expression -> . expression NE expression
    (16) expression -> . SQRT LPAREN expression RPAREN
    (17) expression -> . LOG LPAREN expression RPAREN
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . IDENTIFIER
    (20) expression -> . NUMBER

    SQRT            shift and go to state 5
    LOG             shift and go to state 7
    LPAREN          shift and go to state 6
    IDENTIFIER      shift and go to state 24
    NUMBER          shift and go to state 8

    expression                     shift and go to state 40

state 26

    (3) statement -> IDENTIFIER EQUALS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression

    IDENTIFIER      reduce using rule 3 (statement -> IDENTIFIER EQUALS expression .)
    SQRT            reduce using rule 3 (statement -> IDENTIFIER EQUALS expression .)
    LOG             reduce using rule 3 (statement -> IDENTIFIER EQUALS expression .)
    LPAREN          reduce using rule 3 (statement -> IDENTIFIER EQUALS expression .)
    NUMBER          reduce using rule 3 (statement -> IDENTIFIER EQUALS expression .)
    $end            reduce using rule 3 (statement -> IDENTIFIER EQUALS expression .)
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    TIMES           shift and go to state 13
    DIVIDE          shift and go to state 14
    POWER           shift and go to state 15
    LT              shift and go to state 16
    GT              shift and go to state 17
    LE              shift and go to state 18
    GE              shift and go to state 19
    EQ              shift and go to state 20
    NE              shift and go to state 21


state 27

    (5) expression -> expression PLUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression

    PLUS            reduce using rule 5 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 5 (expression -> expression PLUS expression .)
    POWER           reduce using rule 5 (expression -> expression PLUS expression .)
    LT              reduce using rule 5 (expression -> expression PLUS expression .)
    GT              reduce using rule 5 (expression -> expression PLUS expression .)
    LE              reduce using rule 5 (expression -> expression PLUS expression .)
    GE              reduce using rule 5 (expression -> expression PLUS expression .)
    EQ              reduce using rule 5 (expression -> expression PLUS expression .)
    NE              reduce using rule 5 (expression -> expression PLUS expression .)
    IDENTIFIER      reduce using rule 5 (expression -> expression PLUS expression .)
    SQRT            reduce using rule 5 (expression -> expression PLUS expression .)
    LOG             reduce using rule 5 (expression -> expression PLUS expression .)
    LPAREN          reduce using rule 5 (expression -> expression PLUS expression .)
    NUMBER          reduce using rule 5 (expression -> expression PLUS expression .)
    $end            reduce using rule 5 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 5 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 13
    DIVIDE          shift and go to state 14

  ! TIMES           [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! POWER           [ shift and go to state 15 ]
  ! LT              [ shift and go to state 16 ]
  ! GT              [ shift and go to state 17 ]
  ! LE              [ shift and go to state 18 ]
  ! GE              [ shift and go to state 19 ]
  ! EQ              [ shift and go to state 20 ]
  ! NE              [ shift and go to state 21 ]


state 28

    (6) expression -> expression MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression

    PLUS            reduce using rule 6 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 6 (expression -> expression MINUS expression .)
    POWER           reduce using rule 6 (expression -> expression MINUS expression .)
    LT              reduce using rule 6 (expression -> expression MINUS expression .)
    GT              reduce using rule 6 (expression -> expression MINUS expression .)
    LE              reduce using rule 6 (expression -> expression MINUS expression .)
    GE              reduce using rule 6 (expression -> expression MINUS expression .)
    EQ              reduce using rule 6 (expression -> expression MINUS expression .)
    NE              reduce using rule 6 (expression -> expression MINUS expression .)
    IDENTIFIER      reduce using rule 6 (expression -> expression MINUS expression .)
    SQRT            reduce using rule 6 (expression -> expression MINUS expression .)
    LOG             reduce using rule 6 (expression -> expression MINUS expression .)
    LPAREN          reduce using rule 6 (expression -> expression MINUS expression .)
    NUMBER          reduce using rule 6 (expression -> expression MINUS expression .)
    $end            reduce using rule 6 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 6 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 13
    DIVIDE          shift and go to state 14

  ! TIMES           [ reduce using rule 6 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! POWER           [ shift and go to state 15 ]
  ! LT              [ shift and go to state 16 ]
  ! GT              [ shift and go to state 17 ]
  ! LE              [ shift and go to state 18 ]
  ! GE              [ shift and go to state 19 ]
  ! EQ              [ shift and go to state 20 ]
  ! NE              [ shift and go to state 21 ]


state 29

    (7) expression -> expression TIMES expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression

    PLUS            reduce using rule 7 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 7 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 7 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 7 (expression -> expression TIMES expression .)
    POWER           reduce using rule 7 (expression -> expression TIMES expression .)
    LT              reduce using rule 7 (expression -> expression TIMES expression .)
    GT              reduce using rule 7 (expression -> expression TIMES expression .)
    LE              reduce using rule 7 (expression -> expression TIMES expression .)
    GE              reduce using rule 7 (expression -> expression TIMES expression .)
    EQ              reduce using rule 7 (expression -> expression TIMES expression .)
    NE              reduce using rule 7 (expression -> expression TIMES expression .)
    IDENTIFIER      reduce using rule 7 (expression -> expression TIMES expression .)
    SQRT            reduce using rule 7 (expression -> expression TIMES expression .)
    LOG             reduce using rule 7 (expression -> expression TIMES expression .)
    LPAREN          reduce using rule 7 (expression -> expression TIMES expression .)
    NUMBER          reduce using rule 7 (expression -> expression TIMES expression .)
    $end            reduce using rule 7 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 7 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! TIMES           [ shift and go to state 13 ]
  ! DIVIDE          [ shift and go to state 14 ]
  ! POWER           [ shift and go to state 15 ]
  ! LT              [ shift and go to state 16 ]
  ! GT              [ shift and go to state 17 ]
  ! LE              [ shift and go to state 18 ]
  ! GE              [ shift and go to state 19 ]
  ! EQ              [ shift and go to state 20 ]
  ! NE              [ shift and go to state 21 ]


state 30

    (8) expression -> expression DIVIDE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . POWER expression
    (10) expression -> expression . LT expression
    (11) expression -> expression . GT expression
    (12) expression -> expression . LE expression
    (13) expression -> expression . GE expression
    (14) expression -> expression . EQ expression
    (15) expression -> expression . NE expression
